A bunch of hacks trying to figure out what's wrong with the BenchmarkResults parser on large clusters...
git-svn-id: https://database.cs.brown.edu/svn/hstore/branches/newdtxn-branch@2450 7a8f3d5b-8c5f-44cb-9125-2414a256df87